--- a/API1_back/src/main/resources/application.properties
+++ b/API1_back/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=demo
+spring.application.name=marketplace
 
-# Puerto donde corre tu backend
+# Puerto donde corre el backend
 server.port=4002
 
-# Conexión a MySQL (puerto por defecto es 3306)
-spring.datasource.url=jdbc:mysql://localhost:3306/marketplace?useSSL=false&serverTimezone=UTC
+# Conexión a MySQL (puerto por defecto 3306)
+spring.datasource.url=jdbc:mysql://localhost:3306/marketplace
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
